
Version 1.0.3

    - Tightend up error checking around file operations
    - Improved error message output from Nagios plugin

Version 1.0.2 (r34) Released December 30, 2010

    - Removed the automatic implication of `-n' by `-i'
    - Added `-a' flag to control auto-initialize behavior
      NOTE: this changes the default behavior which previously assumed `-a'
    - Added `-p' flag to change default match to no match
    - Added `-f' flag to specify state file directly
    - Added some more man page clarifications

Version 1.0.1 (r14) Released December 29, 2010

    - Added some man page fixes and clarifications
    - Added a Nagios plugin

Version 1.0 (r6) Released December 29, 2010

    - Initial release

$Id$